@@ -1,6 +1,5 @@
 name              = Dist-Zilla-PluginBundle-MITHALDU
-author            = David Golden <dagolden@cpan.org>
-author            = Christian Walde <mithaldu@cpan.org>
+author            = Christian Walde <walde.christian@gmail.com>
 license           = CC0_1_0
 copyright_holder  = Christian Walde
 
